crates/rehearse/tests/ui/pipeline/fail/missing_question.stderr
error: `step!(...)` in a let binding must be followed by `?`
  --> tests/ui/pipeline/fail/missing_question.rs:16:17
   |
16 |     let value = step!(seed());
   |                 ^^^^^^^^^^^^^
